# rlibc

./: Cargo.toml  build.rs  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml
abi/golden/: x86_64-unknown-linux-gnu.abi
include/: ctype.h  dirent.h  dlfcn.h  errno.h  fcntl.h  fenv.h  glob.h  locale.h  math.h  netdb.h  pthread.h  setjmp.h  signal.h  stdarg.h  stddef.h  stdio.h  stdlib.h  string.h  time.h  unistd.h  wchar.h
include/sys/: resource.h  socket.h  stat.h  sysinfo.h  utsname.h
scripts/: quality-gate.sh
scripts/conformance/: libc-test-adapter.sh  ltp-openposix-adapter.sh
src/: ctype.rs  dlfcn.rs  errno.rs  fcntl.rs  fenv.rs  glob.rs  lib.rs  locale.rs  math.rs  netdb.rs  pthread.rs  resource.rs  setjmp.rs  signal.rs  socket.rs  startup.rs  system.rs  time.rs  unistd.rs
src/abi/: errno.rs  mod.rs  types.rs
src/dirent/: mod.rs
tests/: abi_baseline.rs  abi_golden.rs  conformance_adapter_i060.rs  conformance_adapter_i061.rs  crt_pipeline.rs  ctype.rs  dirent.rs  dlfcn_dlclose.rs  dlfcn_dlerror.rs  dlfcn_dlopen.rs  dlfcn_dlsym.rs  errno_tls_i003.rs  fcntl.rs  fenv.rs  file_metadata.rs  glob.rs  library_shape.rs  locale_setlocale.rs  math_errno_fenv.rs  memory.rs  netdb_getaddrinfo.rs  netdb_getnameinfo.rs  pthread_cond.rs  pthread_i041.rs  pthread_mutex.rs  pthread_rwlock.rs  public_headers_scaffold.rs  quality_gate_ci.rs  resource_limits.rs  setjmp_longjmp.rs  signal_i045.rs  signal_i046.rs  socket_core.rs  startup_arrays.rs  stdio_fflush.rs  stdio_file_locking.rs  stdio_fileno.rs  stdio_host_backed_io.rs  stdio_printf.rs  stdio_setvbuf.rs  (+22 more)
(+33 files in other folders)
