[workspace]
resolver = "3"
members = [
  ".",
  "tools/codestyle-lib",
  "tools/codestyle-check",
  "tools/codestyle-fmt",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
codestyle-lib = { path = "tools/codestyle-lib" }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
arbitrary_source_item_ordering = "deny"
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

[workspace.lints.rust]
dead_code = { level = "warn", priority = 1 }
unused = { level = "deny", priority = -1 }

[package]
name = "rlibc"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
libm = "0.2.16"

[build-dependencies]
cc = "1.2.56"

[lints]
workspace = true
